--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,14 @@ h2 {
   padding-bottom: 10px;
 }
 
+h2 a {
+  color: #049EBE;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  font-weight: normal;
+  padding-bottom: 10px;
+}
+
 h3 {
   color: #049EBE;
   font-family: 'Montserrat', sans-serif;
